gccida/g1/ix86_fp_comparison_arithmetics_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_arithmetics_cost/src/i386.c:7855:43: error: must use 'enum' tag to refer to type 'rtx_code'
int  ix86_fp_comparison_arithmetics_cost( rtx_code code) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_arithmetics_cost/src/i386.c:7884:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7422, "ix86_fp_comparison_arithmetics_cost"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_arithmetics_cost/src/obj/i386.o] Error 1
